sot/qa/cppunit/test_sot.cxx
@@ -14,11 +14,30 @@
 #include <osl/process.h>
 #include <sot/storage.hxx>
 #include <sot/storinfo.hxx>
+#include <sysformats.hxx>
 
 using namespace ::com::sun::star;
 
 namespace
 {
+    size_t FindFormatIndex(const SotAction_Impl* pFormats, SotClipboardFormatId eFormat)
+    {
+        size_t nRet = 0;
+        SotClipboardFormatId nId = pFormats->nFormatId;
+
+        while (nId != static_cast<SotClipboardFormatId>(0xffff))
+        {
+            if (nId == eFormat)
+                break;
+
+            ++pFormats;
+            ++nRet;
+            nId = pFormats->nFormatId;
+        }
+
+        return nRet;
+    }
+
     class SotTest
         : public test::FiltersTest
         , public test::BootstrapFixtureBase
@@ -37,10 +56,12 @@ namespace
 
         void test();
         void testSize();
+        void testClipboard();
 
         CPPUNIT_TEST_SUITE(SotTest);
         CPPUNIT_TEST(test);
         CPPUNIT_TEST(testSize);
+        CPPUNIT_TEST(testClipboard);
         CPPUNIT_TEST_SUITE_END();
     };
 
@@ -142,6 +163,22 @@ namespace
 
         CPPUNIT_ASSERT_MESSAGE("error seeking to beginning", !xStream->GetError());
         CPPUNIT_ASSERT_EQUAL_MESSAGE("stream not at beginning", static_cast<sal_uInt64>(0), xStream->Tell());
+    }
+
+    void SotTest::testClipboard()
+    {
+        const SotAction_Impl* pFormats = sot::GetExchangeDestinationWriterFreeAreaCopy();
+        // tdf#52547 prefer BITMAP over HTML
+        CPPUNIT_ASSERT(FindFormatIndex(pFormats, SotClipboardFormatId::BITMAP) < FindFormatIndex(pFormats, SotClipboardFormatId::HTML));
+        // tdf#78801 prefer imager over html over text
+        CPPUNIT_ASSERT(FindFormatIndex(pFormats, SotClipboardFormatId::BITMAP) < FindFormatIndex(pFormats, SotClipboardFormatId::HTML));
+        CPPUNIT_ASSERT(FindFormatIndex(pFormats, SotClipboardFormatId::HTML) < FindFormatIndex(pFormats, SotClipboardFormatId::STRING));
+        // tdf#81835 prefer RTF/HTML over GDI Metafile
+        CPPUNIT_ASSERT(FindFormatIndex(pFormats, SotClipboardFormatId::RTF) < FindFormatIndex(pFormats, SotClipboardFormatId::GDIMETAFILE));
+        CPPUNIT_ASSERT(FindFormatIndex(pFormats, SotClipboardFormatId::HTML) < FindFormatIndex(pFormats, SotClipboardFormatId::GDIMETAFILE));
+        // tdf#115574 prefer RTF over BITMAP (Excel provides a BITMAP we can't
+        // read, also Excel paste result used to be an editable table)
+        CPPUNIT_ASSERT(FindFormatIndex(pFormats, SotClipboardFormatId::RTF) < FindFormatIndex(pFormats, SotClipboardFormatId::BITMAP));
     }
 
     CPPUNIT_TEST_SUITE_REGISTRATION(SotTest);
